adding read me for running the solution

--- a/Assets.UI/Views/Home/Index.cshtml
+++ b/Assets.UI/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
         <th>Units Sold</th>
         <th>Manufacturing Price</th>
         <th>Sale Price</th>
-        <th>Sale Price</th>
+        <th>Date</th>
     </tr>
     @foreach (var item in Model)
     {
